<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Restarant.restaurant.RestaurentOrderSummary">

    <RelativeLayout
        android:id="@+id/topheader"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">


        <ImageView
            android:id="@+id/back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back_left" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topheader"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_order_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/order_summary"
                android:textColor="@color/black"
                android:textSize="@dimen/mediun_text_size" />

            <TextView
                android:id="@+id/tv_restName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_order_sum"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="Burger Farm"
                android:textColor="@color/black"
                android:textSize="@dimen/mediun_text_size" />

            <TextView
                android:id="@+id/tv_rest_addres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_restName"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/address"
                android:textSize="@dimen/mediun_textt_size" />

            <TextView
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/tv_rest_addres"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/tv_rest_waittiong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/waitting"
                android:textColor="@color/black_greys"
                android:textSize="@dimen/mediun_textt_size" />


            <TextView
                android:id="@+id/tv_youorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_rest_waittiong"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/yourorder"
                android:textColor="@color/black"
                android:textSize="@dimen/mediun_text_size" />

            <TextView
                android:id="@+id/markas"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_rest_waittiong"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/transperat_windoww"
                android:fontFamily="@font/raleway_semibold"
                android:gravity="center"
                android:text="@string/markas"
                android:textAllCaps="true"
                android:textColor="@color/green"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:id="@+id/viewm"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/markas"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tv_recycle_restaurent"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_below="@+id/viewm"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp" />

            <RelativeLayout
                android:id="@+id/totalrel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_recycle_restaurent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/itemtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Item Total"
                    android:textSize="@dimen/mediun_textt_size" />

                <TextView
                    android:id="@+id/tv_itemtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="190"
                    android:textSize="@dimen/mediun_textt_size" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/order_detais_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/totalrel"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/orderdetaiolsre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_semibold"
                    android:text="@string/order_details"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediun_text_size" />

                <TextView
                    android:id="@+id/ordernumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/orderdetaiolsre"
                    android:layout_marginTop="15dp"
                    android:text="Order Number"
                    android:textSize="@dimen/mediun_textt_size" />

                <TextView
                    android:id="@+id/tv_ordernumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ordernumber"
                    android:fontFamily="@font/opensans_bold"
                    android:text="1571322212"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediun_textt_size" />

                <TextView
                    android:id="@+id/orderpayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_ordernumber"
                    android:layout_marginTop="15dp"
                    android:text="@string/paid"
                    android:textSize="@dimen/mediun_textt_size" />

                <TextView
                    android:id="@+id/tv_orderpayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/orderpayment"
                    android:fontFamily="@font/opensans_bold"
                    android:text="Paid : Using Paytm"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediun_textt_size" />
                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_orderpayment"
                    android:layout_marginTop="15dp"
                    android:text="Date"
                    android:textSize="@dimen/mediun_textt_size" />
                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/date"
                    android:fontFamily="@font/opensans_bold"
                    android:text="25 oct 2019"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediun_textt_size" />

                <TextView
                    android:id="@+id/userphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_date"
                    android:layout_marginTop="15dp"
                    android:textAllCaps="true"
                    android:text="@string/phone"
                    android:textSize="@dimen/mediun_textt_size" />

                <TextView
                    android:id="@+id/tv_userphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userphone"
                    android:fontFamily="@font/opensans_bold"
                    android:text="8107116566"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediun_textt_size" />
                <TextView
                    android:id="@+id/deliveryto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_userphone"
                    android:layout_marginTop="15dp"
                    android:textAllCaps="true"
                    android:text="@string/deliver"
                    android:textSize="@dimen/mediun_textt_size" />


                <TextView
                    android:id="@+id/tv_deliveryto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/deliveryto"
                    android:fontFamily="@font/opensans_bold"
                    android:text="jaipur,jaipur"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediun_textt_size" />


                <TextView
                    android:id="@+id/tv_callburger"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_deliveryto"
                    android:fontFamily="@font/opensans_bold"
                    android:text="Call Burger Farm (+91 8107116566)"
                    android:textColor="@color/green"
                    android:textSize="@dimen/mediun_textt_size" />


            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>