<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:background="@color/white"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/linhorizonatl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2">


                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:src="@drawable/coffee" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/exd"
                        android:textColor="@color/red"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:src="@drawable/eo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/viod"
                        android:textColor="@color/red"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:src="@drawable/eo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/free"
                        android:textColor="@color/red"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:src="@drawable/m" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/bev"
                        android:textColor="@color/red"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:src="@drawable/v" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/veg"
                        android:textColor="@color/red"
                        android:textSize="11sp" />
                </LinearLayout>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_below="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:id="@+id/fcardk"
                card_view:cardCornerRadius="@dimen/card_album_radius"
                >
                <RelativeLayout
                    android:id="@+id/top"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    >

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/pager"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_alignParentTop="true" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <RelativeLayout
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_button">

                <TextView
                    android:drawableLeft="@drawable/ic_place_red"
                    android:id="@+id/textloc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:singleLine="true"
                    android:text="Address"
                    android:textColor="@color/black"
                    android:textSize="8pt" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_marginTop="5dp"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/fcardk" />
            <!--  <com.wang.avi.AVLoadingIndicatorView
                  android:id="@+id/bar"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:visibility="gone"
                  app:indicatorColor="#fa0202"
                  app:indicatorName="BallPulseIndicator" />
      -->
            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                app:indicatorColor="#fa0202"
                app:indicatorName="BallPulseIndicator" />
        </RelativeLayout>
    </ScrollView>




</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>